# streaming-clickstream-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
dashboard/: __init__.py  app.py  config.py
dashboard/components/: funnel.py  geography.py  infrastructure.py  overview.py  products.py  traffic.py
docker/dashboard/: Dockerfile
docker/producer/: Dockerfile
docker/spark/: Dockerfile
docs/: architecture.md  final-review.md  tradeoffs.md
docs/images/: architecture.txt  docker-containers.txt  infrastructure-health.txt  spark-logs.txt
producer/: __init__.py  config.py  generator.py  kafka_client.py  main.py  models.py
spark/: __init__.py  config.py  main.py  schemas.py  streaming.py  transforms.py
storage/: __init__.py  config.py  queries.py
tests/: __init__.py  conftest.py  test_dashboard.py  test_docker_smoke.py  test_edge_cases.py  test_generator.py  test_models.py  test_schemas.py  test_streaming.py  test_transforms.py
